Update Love Babbar DSA - Dynamic Programming.ipynb

--- a/Love Babbar DSA - Dynamic Programming.ipynb
+++ b/Love Babbar DSA - Dynamic Programming.ipynb
@@ -15,18 +15,18 @@
     "### Unbounded Knapsack Problem\n",
     "\n",
     "\n",
-    "<!-- Coin Change Problem -> Total number of ways to generate tgt coin sum (we need combinations here not permutations)\n",
+    " Coin Change Problem -> Total number of ways to generate tgt coin sum (we need combinations here not permutations)\n",
     "                            -> For combinations always keep upper loop on coin weights(sikke) other wise it will lead \n",
     "                               to same combinations with different permutations which will result in higher ans -->\n",
     "                    \n",
-    "<!--                     -> Minimum number of coins required to generate the coin sum\n",
+    "                   -> Minimum number of coins required to generate the coin sum\n",
     "                            -> For generating all permutations keep upper loop on all possible sum possible (0..n) \n",
     "                               where n is tgt coin sum. For each possible sum do a inner loop with all coin changes avbl.  -->\n",
     "                               \n",
-    "<!-- Edit Distance problem  ->  mein 2D DP array bnega and then for every cell we will compare current chrs of 2 string agr equal hue to distance nhi bdaenge aur same assign krdenge jo dp[i-1][j-1] m tha, ulte case m min nikalenge upr,left aur diag ka fir +1 krdena\n",
+    " Edit Distance problem  ->  mein 2D DP array bnega and then for every cell we will compare current chrs of 2 string agr equal hue to distance nhi bdaenge aur same assign krdenge jo dp[i-1][j-1] m tha, ulte case m min nikalenge upr,left aur diag ka fir +1 krdena\n",
     " -->\n",
     "\n",
-    "<!-- LCS Problem -> Hr char k pas 2 opt h include ya exclude, agr curr char match nhi hore to drop krke dekho dono m s 1 1 bar jisko drop krne s LCS ki value kam ho use drop nhi krna h islie max lenge dp[i-1][j] aur dp[i][j-1] ka -->"
+    " LCS Problem -> Hr char k pas 2 opt h include ya exclude, agr curr char match nhi hore to drop krke dekho dono m s 1 1 bar jisko drop krne s LCS ki value kam ho use drop nhi krna h islie max lenge dp[i-1][j] aur dp[i][j-1] ka -->"
    ]
   },
   {
