--- a/Love Babbar DSA - Dynamic Programming.ipynb
+++ b/Love Babbar DSA - Dynamic Programming.ipynb
@@ -355,7 +355,7 @@
     }
    ],
    "source": [
-    "# Gold Mine Problem\n",
+    "# Gold Mine Problem (Easy - refer youtube)\n",
     "\n",
     "n=int(input())\n",
     "matrix=[]\n",
@@ -465,10 +465,233 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "axxxy\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Longest Repeated Subsequence (LCS modification - Take LCS with itself checking index)\n",
+    "\n",
+    "s1=input()\n",
+    "s2=s1\n",
+    "dp=[]\n",
+    "for i in range(len(s1)+1):\n",
+    "    temp=[]\n",
+    "    for j in range(len(s2)+1):\n",
+    "        temp.append(0)\n",
+    "    dp.append(temp)\n",
+    "\n",
+    "for i in range(1,len(dp)):\n",
+    "    for j in range(1,len(dp[i])):\n",
+    "        if s1[i-1]==s2[j-1] and i!=j:\n",
+    "            dp[i][j]=1+dp[i-1][j-1]\n",
+    "        else:\n",
+    "            dp[i][j]=max(dp[i-1][j],dp[i][j-1])\n",
+    "\n",
+    "print(dp[-1][-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "24 60 28 40 90\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Longest Increasing Subsequence\n",
+    "\n",
+    "n=int(input())\n",
+    "a=list(map(int,input().split()))\n",
+    "dp=[1 for i in range(n)]\n",
+    "for i in range(1,len(dp)):\n",
+    "    for j in range(i):\n",
+    "        if a[j]<a[i]:\n",
+    "            dp[i]=max(dp[i],1+dp[j])\n",
+    "print(max(dp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LCS (Longest Common Subsequence) of three strings (LCS modification)\n",
+    "\n",
+    "X=\"12XBA\"\n",
+    "Y=\"12TXAYB\"\n",
+    "Z=\"12XBA\"\n",
+    "m=len(X)\n",
+    "n=len(Y)\n",
+    "o=len(Z)\n",
+    "L = [[[0 for i in range(o+1)] for j in range(n+1)] for k in range(m+1)]\n",
+    "for i in range(m+1):\n",
+    "    for j in range(n+1):\n",
+    "        for k in range(o+1):\n",
+    "            if (i == 0 or j == 0 or k == 0):\n",
+    "                L[i][j][k] = 0\n",
+    "\n",
+    "            elif (X[i-1] == Y[j-1] and\n",
+    "                X[i-1] == Z[k-1]):\n",
+    "                L[i][j][k] = L[i-1][j-1][k-1] + 1\n",
+    "\n",
+    "            else:\n",
+    "                L[i][j][k] = max(max(L[i-1][j][k],L[i][j-1][k]),L[i][j][k-1])\n",
+    "\n",
+    "print(L[m][n][o])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 101 2 3 100\n",
+      "[1, 102, 3, 6, 106]\n",
+      "106\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum Sum Increasing Subsequence (LIS modification)\n",
+    "\n",
+    "\n",
+    "a=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "dp=[a[i] for i in range(len(a))]\n",
+    "for i in range(1,len(dp)):\n",
+    "    for j in range(i):\n",
+    "        if a[i]>a[j]:\n",
+    "            dp[i]=max(dp[i],a[i]+dp[j])\n",
+    "print(max(dp))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9 4 5 4 8 6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Longest subsequence such that difference between adjacent is one (LIS modification)\n",
+    "\n",
+    "a=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "dp=[1 for i in range(len(a))]\n",
+    "for i in range(1,len(dp)):\n",
+    "    for j in range(i):\n",
+    "        if abs(a[i]-a[j])==1:\n",
+    "            dp[i]=max(dp[i],1+dp[j])\n",
+    "print(max(dp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 1000 100 1000 1\n",
+      "2101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum subsequence sum such that no three are consecutive\n",
+    "\n",
+    "list1=list(map(int,input().split()))\n",
+    "dp=[0 for i in range(len(list1))]\n",
+    "\n",
+    "# base case settings\n",
+    "dp[0]=list1[0]\n",
+    "dp[1]=list1[1]+list1[0]\n",
+    "for i in range(2,len(list1)):\n",
+    "    dp[i]=max(dp[i-1],dp[i-2]+list1[i],dp[i-3]+list1[i]+list1[i-1])\n",
+    "print(dp[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5 39 15 27 50\n",
+      "24 60 28 40 90\n",
+      "[1, 2, 1, 2, 3]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum Length Chain of Pairs (LIS modification)\n",
+    "\n",
+    "n=int(input())\n",
+    "pair_first=list(map(int,input().split()))\n",
+    "pair_sec=list(map(int,input().split()))\n",
+    "pair_first, pair_sec = map(list, zip(*sorted(zip(pair_first, pair_sec))))\n",
+    "dp=[1 for i in range(n)]\n",
+    "for i in range(1,len(dp)):\n",
+    "    for j in range(i):\n",
+    "        if pair_first[i]>pair_sec[j]:\n",
+    "            dp[i]=max(dp[i],1+dp[j])\n",
+    "print(max(dp))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5 39 15 27 50\n",
+    "24 60 28 40 90"
+   ]
   }
  ],
  "metadata": {
